// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SButton.vue can be size large 1`] = `
<button class="button button--size-large">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be size regular 1`] = `
<button class="button button--size-regular">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be size small 1`] = `
<button class="button button--size-small">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can have a loading spinner 1`] = `
<button class="button button--loading"><span class="button__spinner"><sspinner></sspinner></span>
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can have an icon and no text 1`] = `
<button aria-label="Button" class="button button--icon-only">
  <!---->
  <sicon icon="activity" class="button__icon button__icon--left"></sicon>
  <!---->
  <!---->
</button>
`;

exports[`SButton.vue can have an icon on the left 1`] = `
<button class="button">
  <!---->
  <sicon icon="activity" class="button__icon button__icon--left"></sicon> Button Text
  <!---->
</button>
`;

exports[`SButton.vue can have an icon on the right 1`] = `
<button class="button">
  <!---->
  <!----> Button Text <sicon icon="activity" class="button__icon button__icon--right"></sicon></button>
`;

exports[`SButton.vue can use slot text for \`aria-label\` 1`] = `
<button aria-label="Button Text" class="button button--icon-only">
  <!---->
  <sicon icon="activity" class="button__icon button__icon--left"></sicon>
  <!---->
  <!---->
</button>
`;

exports[`SButton.vue renders correctly 1`] = `
<button class="button">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color gold can be outlined 1`] = `
<button class="button button--color-gold-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color gold can be plain 1`] = `
<button class="button button--color-gold">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color gold can be text 1`] = `
<button class="button button--color-gold-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color green can be outlined 1`] = `
<button class="button button--color-green-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color green can be plain 1`] = `
<button class="button button--color-green">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color green can be text 1`] = `
<button class="button button--color-green-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color grey can be outlined 1`] = `
<button class="button button--color-grey-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color grey can be plain 1`] = `
<button class="button button--color-grey">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color grey can be text 1`] = `
<button class="button button--color-grey-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color ice can be outlined 1`] = `
<button class="button button--color-ice-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color ice can be plain 1`] = `
<button class="button button--color-ice">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color ice can be text 1`] = `
<button class="button button--color-ice-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color magenta can be outlined 1`] = `
<button class="button button--color-magenta-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color magenta can be plain 1`] = `
<button class="button button--color-magenta">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color magenta can be text 1`] = `
<button class="button button--color-magenta-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color night can be outlined 1`] = `
<button class="button button--color-night-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color night can be plain 1`] = `
<button class="button button--color-night">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color night can be text 1`] = `
<button class="button button--color-night-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color red can be outlined 1`] = `
<button class="button button--color-red-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color red can be plain 1`] = `
<button class="button button--color-red">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color red can be text 1`] = `
<button class="button button--color-red-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color spartan_blue can be outlined 1`] = `
<button class="button button--color-spartan_blue-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color spartan_blue can be plain 1`] = `
<button class="button button--color-spartan_blue">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color spartan_blue can be text 1`] = `
<button class="button button--color-spartan_blue-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color turquoise can be outlined 1`] = `
<button class="button button--color-turquoise-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color turquoise can be plain 1`] = `
<button class="button button--color-turquoise">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color turquoise can be text 1`] = `
<button class="button button--color-turquoise-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color white can be outlined 1`] = `
<button class="button button--color-white-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color white can be plain 1`] = `
<button class="button button--color-white">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue with color white can be text 1`] = `
<button class="button button--color-white-text">
  <!---->
  <!----> Button Text
  <!----></button>
`;
